Tools/nexus/20-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      securityContext:
        fsGroup: 200

      containers:
      - name: nexus
        image: sonatype/nexus3:latest

        ports:
        - containerPort: 8081

        volumeMounts:
        - name: nexus-storage
          mountPath: /nexus-data

      volumes:
      - name: nexus-storage
        persistentVolumeClaim:
          claimName: nexus-pvc
