Tools/nexus/30-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
spec:
  selector:
    app: nexus
  ports:
  - port: 8081
    targetPort: 8081
